--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "10th project to be submitted",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "start:dev": "node index.js",
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mostafiz",
